--- a/templates/conventions/cadastre.html
+++ b/templates/conventions/cadastre.html
@@ -101,18 +101,7 @@
                                 <thead>
                                     <tr>
                                         {% if convention.statut != 'BROUILLON' %}
-                                            <th scope="col">
-                                                <div id="reference_cadastrale_comment_factory"></div>
-                                                <script type="text/javascript" nonce="{{request.csp_nonce}}">
-                                                    const cf = new CommentFactory({
-                                                        container_id : 'reference_cadastrale_comment_factory',
-                                                        convention_uuid : '{{convention.uuid}}',
-                                                        object_name : 'reference_cadastrale',
-                                                        object_field : 'all',
-                                                        loading_img : '{% static "icons/loading.gif" %}'
-                                                    })
-                                                </script>
-                                            </th>
+                                            {% include 'common/utils/comments_header.html' with object_name='reference_cadastrale' %}
                                         {% endif %}
                                         <th scope="col">Section {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
                                         <th scope="col">Numéro {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
