--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -11,6 +11,7 @@
 
 {% block javascript_extras %}
     <script src="{% static "js/comment-block.js" %}" nonce="{{request.csp_nonce}}"></script>
+    <script src="{% static "js/comment-factory.js" %}" nonce="{{request.csp_nonce}}"></script>
 {% endblock %}
 
 
@@ -169,14 +170,7 @@
                                                 <thead>
                                                     <tr>
                                                         {% if convention.statut != 'BROUILLON' %}
-                                                            <th scope="col">
-                                                                <div class="content__icons content__icons--darkgrey">
-                                                                    <svg role="img" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewbox="0 0 24 24" aria-labelledby="chatIconTitle">
-                                                                        <title id="chatIconTitle">Comments</title>
-                                                                        <path d="M8.82388455,18.5880577 L4,21 L4.65322944,16.4273939 C3.00629211,15.0013 2,13.0946628 2,11 C2,6.581722 6.4771525,3 12,3 C17.5228475,3 22,6.581722 22,11 C22,15.418278 17.5228475,19 12,19 C10.8897425,19 9.82174472,18.8552518 8.82388455,18.5880577 Z"></path>
-                                                                    </svg>
-                                                                </div>
-                                                            </th>
+                                                            {% include 'common/utils/comments_header.html' with object_name='reference_cadastrale' %}
                                                         {% endif %}
                                                         <th scope="col">Section {% include "common/mandatory_field_star.html" %}</th>
                                                         <th scope="col">Numéro {% include "common/mandatory_field_star.html" %}</th>
@@ -245,14 +239,7 @@
                                                 <thead>
                                                     <tr>
                                                         {% if convention.statut != 'BROUILLON' %}
-                                                            <th scope="col">
-                                                                <div class="content__icons content__icons--darkgrey">
-                                                                    <svg role="img" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewbox="0 0 24 24" aria-labelledby="chatIconTitle">
-                                                                        <title id="chatIconTitle">Comments</title>
-                                                                        <path d="M8.82388455,18.5880577 L4,21 L4.65322944,16.4273939 C3.00629211,15.0013 2,13.0946628 2,11 C2,6.581722 6.4771525,3 12,3 C17.5228475,3 22,6.581722 22,11 C22,15.418278 17.5228475,19 12,19 C10.8897425,19 9.82174472,18.8552518 8.82388455,18.5880577 Z"></path>
-                                                                    </svg>
-                                                                </div>
-                                                            </th>
+                                                            {% include 'common/utils/comments_header.html' with object_name='logement_edd' %}
                                                         {% endif %}
                                                         <th scope="col">Financement {% include "common/mandatory_field_star.html" %}</th>
                                                         <th scope="col">Désignation {% include "common/mandatory_field_star.html" %}</th>
@@ -311,14 +298,7 @@
                                                 <thead>
                                                     <tr>
                                                         {% if convention.statut != 'BROUILLON' %}
-                                                            <th scope="col">
-                                                                <div class="content__icons content__icons--darkgrey">
-                                                                    <svg role="img" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewbox="0 0 24 24" aria-labelledby="chatIconTitle">
-                                                                        <title id="chatIconTitle">Comments</title>
-                                                                        <path d="M8.82388455,18.5880577 L4,21 L4.65322944,16.4273939 C3.00629211,15.0013 2,13.0946628 2,11 C2,6.581722 6.4771525,3 12,3 C17.5228475,3 22,6.581722 22,11 C22,15.418278 17.5228475,19 12,19 C10.8897425,19 9.82174472,18.8552518 8.82388455,18.5880577 Z"></path>
-                                                                    </svg>
-                                                                </div>
-                                                            </th>
+                                                            {% include 'common/utils/comments_header.html' with object_name='pret' %}
                                                         {% endif %}
                                                         <th scope="col">Numéro</th>
                                                         <th scope="col">Date d'octroi</th>
@@ -390,14 +370,7 @@
                                                 <thead>
                                                     <tr>
                                                         {% if convention.statut != 'BROUILLON' %}
-                                                            <th scope="col">
-                                                                <div class="content__icons content__icons--darkgrey">
-                                                                    <svg role="img" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewbox="0 0 24 24" aria-labelledby="chatIconTitle">
-                                                                        <title id="chatIconTitle">Comments</title>
-                                                                        <path d="M8.82388455,18.5880577 L4,21 L4.65322944,16.4273939 C3.00629211,15.0013 2,13.0946628 2,11 C2,6.581722 6.4771525,3 12,3 C17.5228475,3 22,6.581722 22,11 C22,15.418278 17.5228475,19 12,19 C10.8897425,19 9.82174472,18.8552518 8.82388455,18.5880577 Z"></path>
-                                                                    </svg>
-                                                                </div>
-                                                            </th>
+                                                            {% include 'common/utils/comments_header.html' with object_name='logement' %}
                                                         {% endif %}
                                                         <th scope="col" class="col__width--150">Désignation {% include "common/mandatory_field_star.html" %}</th>
                                                         <th scope="col" class="col__width--120">Type {% include "common/mandatory_field_star.html" %}</th>
@@ -498,14 +471,7 @@
                                                 <thead>
                                                     <tr>
                                                         {% if convention.statut != 'BROUILLON' %}
-                                                            <th scope="col">
-                                                                <div class="content__icons content__icons--darkgrey">
-                                                                    <svg role="img" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewbox="0 0 24 24" aria-labelledby="chatIconTitle">
-                                                                        <title id="chatIconTitle">Comments</title>
-                                                                        <path d="M8.82388455,18.5880577 L4,21 L4.65322944,16.4273939 C3.00629211,15.0013 2,13.0946628 2,11 C2,6.581722 6.4771525,3 12,3 C17.5228475,3 22,6.581722 22,11 C22,15.418278 17.5228475,19 12,19 C10.8897425,19 9.82174472,18.8552518 8.82388455,18.5880577 Z"></path>
-                                                                    </svg>
-                                                                </div>
-                                                            </th>
+                                                            {% include 'common/utils/comments_header.html' with object_name='annexe' %}
                                                         {% endif %}
                                                         <th scope="col" class="col__width--150">Type d'annexe {% include "common/mandatory_field_star.html" %}</th>
                                                         <th scope="col" class="col__width--200">Désignation des logements {% include "common/mandatory_field_star.html" %}</th>
@@ -597,14 +563,7 @@
                                                 <thead>
                                                     <tr>
                                                         {% if convention.statut != 'BROUILLON' %}
-                                                            <th scope="col">
-                                                                <div class="content__icons content__icons--darkgrey">
-                                                                    <svg role="img" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewbox="0 0 24 24" aria-labelledby="chatIconTitle">
-                                                                        <title id="chatIconTitle">Comments</title>
-                                                                        <path d="M8.82388455,18.5880577 L4,21 L4.65322944,16.4273939 C3.00629211,15.0013 2,13.0946628 2,11 C2,6.581722 6.4771525,3 12,3 C17.5228475,3 22,6.581722 22,11 C22,15.418278 17.5228475,19 12,19 C10.8897425,19 9.82174472,18.8552518 8.82388455,18.5880577 Z"></path>
-                                                                    </svg>
-                                                                </div>
-                                                            </th>
+                                                            {% include 'common/utils/comments_header.html' with object_name='type_stationnement' %}
                                                         {% endif %}
                                                         <th scope="col" class="col__width--150">Type de stationnement {% include "common/mandatory_field_star.html" %}</th>
                                                         <th scope="col" class="col__width--200">Nombre de staionnements {% include "common/mandatory_field_star.html" %}</th>
