--- a/templates/conventions/stationnements.html
+++ b/templates/conventions/stationnements.html
@@ -6,6 +6,7 @@
 
 {% block javascript_extras %}
     <script src="{% static "js/comment-block.js" %}" nonce="{{request.csp_nonce}}"></script>
+    <script src="{% static "js/comment-factory.js" %}" nonce="{{request.csp_nonce}}"></script>
 {% endblock %}
 
 {% block content %}
@@ -43,7 +44,7 @@
                                 <thead>
                                     <tr>
                                         {% if convention.statut != 'BROUILLON' %}
-                                            {% include 'common/utils/comments_header.html' with comment_prefix='type_stationnement__uuid__' header_id='header_icon_type_stationnement' %}
+                                            {% include 'common/utils/comments_header.html' with object_name='type_stationnement' %}
                                         {% endif %}
                                         <th scope="col" class="col__width--150">Type de stationnement {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
                                         <th scope="col" class="col__width--200">Nombre de staionnements {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
