--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -566,7 +566,7 @@
                                                             {% include 'common/utils/comments_header.html' with object_name='type_stationnement' %}
                                                         {% endif %}
                                                         <th scope="col" class="col__width--150">Type de stationnement {% include "common/mandatory_field_star.html" %}</th>
-                                                        <th scope="col" class="col__width--200">Nombre de staionnements {% include "common/mandatory_field_star.html" %}</th>
+                                                        <th scope="col" class="col__width--200">Nombre de stationnements {% include "common/mandatory_field_star.html" %}</th>
                                                         <th scope="col" class="col__width--150">Loyer maximum en € {% include "common/mandatory_field_star.html" %}</th>
                                                     </tr>
                                                 </thead>
