--- a/templates/conventions/stationnements.html
+++ b/templates/conventions/stationnements.html
@@ -47,7 +47,7 @@
                                             {% include 'common/utils/comments_header.html' with object_name='type_stationnement' %}
                                         {% endif %}
                                         <th scope="col" class="col__width--150">Type de stationnement {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
-                                        <th scope="col" class="col__width--200">Nombre de staionnements {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
+                                        <th scope="col" class="col__width--200">Nombre de stationnements {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
                                         <th scope="col" class="col__width--150">Loyer maximum en € {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
                                     </tr>
                                 </thead>
