--- a/templates/common/form/input_upload.html
+++ b/templates/common/form/input_upload.html
@@ -9,13 +9,15 @@
                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
         {% endif %}
         <div class="block--row-strech" id="{{form_input.id_for_label}}_div">
-
             <label class="block--row-strech-1 fr-label fr-mt-1w fr-mb-2w fr-h4" for="{{form_input.id_for_label}}">
                 {{ label }}
                 {% if mandatory %}
                     &nbsp;{% include "common/mandatory_field_star.html" %}
                 {% endif %}
                 {% include "common/help_field.html" with form_input=form_input %}
+                {% if additional_informations %}
+                    {% include "common/additional_informations.html" with form_input=form_input %}
+                {% endif %}
             </label>
             {% include "common/comment_icon.html" with form_input_id=form_input.id_for_label object_field=object_field comments=comments %}
         </div>
@@ -47,6 +49,7 @@
                 {% if textarea %}
                     <i class="fr-text--sm">et/ou </i>
                 {% endif %}
+
                 <button type="button" class="fr-btn fr-mb-1w" id="{{form_input_files.id_for_label}}_dz_button">
                     <img class="apilos-fi-btn fr-mr-1w" src="{% static "icons/upload.svg" %}" ></img>Téléverser une image{% if not image_only %} ou un pdf{% endif %}
                 </button>
